--- a/pom.xml
+++ b/pom.xml
@@ -57,11 +57,11 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client -->
-        <dependency>
+        <!--dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>2.26</version>
-        </dependency>
+        </dependency-->
 
 
     </dependencies>
