--- a/pom.xml
+++ b/pom.xml
@@ -80,15 +80,15 @@
 
     <repositories>
         <repository>
-            <id>storelink-releases</id>
+            <id>storelink</id>
             <name>Storelink repo</name>
-            <url>http://storelink.ns0.it:8181/nexus/content/repositories/releases</url>
+            <url>http://storelink.ns0.it:8182/nexus/content/repositories/releases</url>
         </repository>
-        <repository>
+        <!--repository>
             <id>storelink-snapshot</id>
             <name>Storelink repo</name>
-            <url>http://storelink.ns0.it:8181/nexus/content/repositories/snapshots</url>
-        </repository>
+            <url>http://storelink.ns0.it:8182/nexus/content/repositories/snapshots</url>
+        </repository-->
     </repositories>
 
 </project>
