--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -6,7 +6,7 @@ log4j.logger.com.serotonin.io.serial.JsscSerialPortInputStream = FATAL
 
 # LOGFILE is set to be a RollingFileAppender.
 log4j.appender.LOGFILE=org.apache.log4j.RollingFileAppender
-log4j.appender.LOGFILE.File=./log/OpenmaintLog4j.log
+log4j.appender.LOGFILE.File=log/OpenmaintLog4j.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.ImmediateFlush=true
 
