Prima Gestione OpenMain / Mango

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,7 +4,7 @@ SCENARIO_REPEAT=-1
 #install path
 #INSTALL_PATH=/home/pi/simulatore/OpenmaintMango/
 #INSTALL_PATH=C:\\iot\\git\\OpenmaintMango\\
-INSTALL_PATH=/home/kratos/Developments/storelink/mango-openmaint-client/
+INSTALL_PATH=C:\\iot\\git\\mango-openmaint-client\\
 # Dalla cartella vengono letti tutti i files XML presenti in ordine alfabetico.
 SENSORI_FOLDER = sensors
 
