Modificata gestione dei thread

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 # quante volte va eseguito lo scenario. -1 per ciclare all'infinito
 SCENARIO_REPEAT=-1
+SCENARIO_SLEEP=60000
 
 #install path
 #INSTALL_PATH=/home/pi/simulatore/OpenmaintMango/
