added local/remote Mango

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 # quante volte va eseguito lo scenario. -1 per ciclare all'infinito
 SCENARIO_REPEAT=-1
-SCENARIO_SLEEP=60000
+SCENARIO_SLEEP=10000
 
 #install path
 #INSTALL_PATH=/home/pi/simulatore/OpenmaintMango/
@@ -15,7 +15,14 @@ OPENMAINT_USR = admin
 OPENMAINT_PWD = pIPP0
 
 # MANGO
-MANGO_BASE_URL = http://localhost:8080/rest
-MANGO_BASE_WSURL = ws://localhost:8080/rest/v1/websocket/point-value
+# local
+#MANGO_BASE_URL =   http://localhost:8080/rest
+#MANGO_BASE_WSURL = ws://localhost:8080/rest/v1/websocket/point-value
+#MANGO_USR = admin
+#MANGO_PWD = admin
+
+#remote
+MANGO_BASE_URL = http://storelink.ns0.it:7779/rest
+MANGO_BASE_WSURL = ws://storelink.ns0.it:7779/rest/v1/websocket/point-value
 MANGO_USR = admin
-MANGO_PWD = admin
+MANGO_PWD = @dmin123
